--- a/tercerCuarto.html
+++ b/tercerCuarto.html
@@ -47,7 +47,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 1:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -57,7 +57,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 2:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -67,7 +67,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 3:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -77,7 +77,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 4:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -87,7 +87,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 5:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -97,7 +97,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 6:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -109,7 +109,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 7:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -119,7 +119,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 8:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -129,7 +129,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 9:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -139,7 +139,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 10:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -149,7 +149,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 11:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -159,7 +159,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 12:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -171,7 +171,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 13:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -181,7 +181,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 14:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -191,7 +191,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 15:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -201,7 +201,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 16:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -211,7 +211,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 17:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -221,7 +221,7 @@
           <div style="display: flex; margin-top: 1em">
             <p class="mx-2">Hoyo 18:</p>
             <input
-              class="w-25"
+              class="w-25 score-input"
               style="height: 2rem"
               type="text"
               name=""
@@ -230,7 +230,11 @@
           </div>
         </div>
         <div class="col-12 text-center">
-          <button id="cuartos_finishButton" class="w-25 mt-4">
+          <button
+            onclick="storeScores()"
+            id="cuartos_finishButton"
+            class="w-25 mt-4"
+          >
             Cargar Score
           </button>
           <button
@@ -244,10 +248,40 @@
       </div>
     </div>
 
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        // Selecciona todos los inputs de puntuación
+        const inputs = document.querySelectorAll(".score-input");
+        const submitButton = document.getElementById("cuartos_finishButton");
+
+        // Función para verificar si algún input tiene valor
+        function checkInputs() {
+          let hasValue = false;
+          inputs.forEach((input) => {
+            if (input.value.trim() !== "") {
+              hasValue = true;
+            }
+          });
+
+          // Habilita o deshabilita el botón según haya un valor
+          submitButton.disabled = !hasValue;
+        }
+
+        // Agrega un listener a cada input para detectar cambios
+        inputs.forEach((input) => {
+          input.addEventListener("input", checkInputs);
+        });
+
+        // Inicialmente deshabilitar el botón
+        submitButton.disabled = true;
+      });
+    </script>
+
     <script type="module" src="players.js"></script>
     <script type="module" src="tournamentManagment.js"></script>
     <script type="module" src="fetchPlayers.js"></script>
     <script type="module" src="fetchScores.js"></script>
+    <script type="module" src="processScores.js"></script>
 
     <script type="module">
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-app.js";
@@ -255,6 +289,7 @@
       import { getFirestore } from "https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore.js";
       import { firebaseConfig } from "./firebaseConfig.js";
       import { fetchScoresForPlayer } from "./fetchScores.js";
+      import { collectScores } from "./processScores.js";
 
       // Initialize Firebase
       const app = initializeApp(firebaseConfig);
@@ -288,12 +323,25 @@
         }
       };
       window.handleModal = handleModal;
+
+      let storeScores = () => {
+        collectScores();
+      };
+      window.storeScores = storeScores;
+    </script>
+
+    <script>
+      let goBack = () => {
+        window.location.href = "tournamentManagment.html";
+      };
     </script>
 
     <script>
       function handleModal(id, playerNumber) {
-        // This function will call the actual implementation
         window.handleModal(id, playerNumber);
+      }
+      function storeScores() {
+        window.storeScores();
       }
     </script>
 
