--- a/finales.html
+++ b/finales.html
@@ -232,7 +232,7 @@
         <div class="col-12 text-center">
           <button
             onclick="storeScores()"
-            id="cuartos_finishButton"
+            id="cargarScoreButtonFinales"
             class="w-25 mt-4"
           >
             Cargar Score
@@ -254,7 +254,9 @@
       document.addEventListener("DOMContentLoaded", function () {
         // Selecciona todos los inputs de puntuación
         const inputs = document.querySelectorAll(".score-input");
-        const submitButton = document.getElementById("cuartos_finishButton");
+        const submitButton = document.getElementById(
+          "cargarScoreButtonFinales"
+        );
 
         // Función para verificar si algún input tiene valor
         function checkInputs() {
