--- a/tournamentManagment.html
+++ b/tournamentManagment.html
@@ -40,6 +40,9 @@
               Manejar partidos
             </button>
           </div>
+          <button class="btn btn-secondary w-50 mx-2 mt-3" id="apuestas">
+            Apuestas
+          </button>
         </div>
         <div class="col-12 col-lg-3"></div>
       </div>
@@ -216,6 +219,10 @@
 
       document.getElementById("tercerCuarto").addEventListener("click", () => {
         window.location.href = "tercerCuarto.html";
+      });
+
+      document.getElementById("apuestas").addEventListener("click", () => {
+        window.location.href = "bets.html";
       });
     </script>
 
